force-app/main/default/objects/Factura__c/Factura__c.object-meta.xml
<CustomObject>
    <description>Objeto utilizado para almacenar las facturas del pedido</description>
    <label>Factura</label>
    <nameField>
        <label>Número de Factura</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facturas</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>