force-app/main/default/objects/Factura__c/fields/IMP_CentroBeneficio__c.field-meta.xml
<CustomField>
    <fullName>IMP_CentroBeneficio__c</fullName>
    <description>El centro de beneficio es la clave que junto con la sociedad CO identifica un centro de beneficio de forma unívoca en SAP.</description>
    <label>Centro de beneficio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>