force-app/main/default/objects/Factura__c/fields/IMP_ClaseFactura__c.field-meta.xml
<CustomField>
    <fullName>IMP_ClaseFactura__c</fullName>
    <description>Clase de documento comercial factura que se tiene en SAP.</description>
    <label>Clase de factura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>