force-app/main/default/objects/Factura__c/fields/IMP_Cliente__c.field-meta.xml
<CustomField>
    <fullName>IMP_Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relación hacia el cliente</description>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Facturas</relationshipLabel>
    <relationshipName>Facturas</relationshipName>
    <type>Lookup</type>
</CustomField>