force-app/main/default/objects/Factura__c/fields/IMP_CondicionesPago__c.field-meta.xml
<CustomField>
    <fullName>IMP_CondicionesPago__c</fullName>
    <description>Clave a través de la cual se definen las condiciones de pago en forma de tipos de descuento y plazos de pago.</description>
    <label>Condiciones de pago</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NT00</fullName>
                <label>Pagado a la recepción</label>
            </value>
            <value>
                <fullName>NT08</fullName>
                <label>Vencimiento 08 días</label>
            </value>
            <value>
                <fullName>NT15</fullName>
                <label>Vencimiento 15 días</label>
            </value>
            <value>
                <fullName>NT20</fullName>
                <label>Vencimiento 20 días</label>
            </value>
            <value>
                <fullName>NT30</fullName>
                <label>Vencimiento 30 días</label>
            </value>
            <value>
                <fullName>NT45</fullName>
                <label>Vencimiento 45 días</label>
            </value>
            <value>
                <fullName>NT60</fullName>
                <label>Vencimiento 60 díías</label>
            </value>
            <value>
                <fullName>NT90</fullName>
                <label>Vencimiento 90 días</label>
            </value>
            <value>
                <fullName>NT120</fullName>
                <label>Vencimiento 120 días</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>