force-app/main/default/objects/Factura__c/fields/IMP_DescCeBe__c.field-meta.xml
<CustomField>
    <fullName>IMP_DescCeBe__c</fullName>
    <description>Descripción Centro de Beneficio</description>
    <label>Descripción Ce Be</label>
    <length>255</length>
    <type>Text</type>
</CustomField>