force-app/main/default/objects/Factura__c/fields/IMP_DescGrupoVendedor__c.field-meta.xml
<CustomField>
    <fullName>IMP_DescGrupoVendedor__c</fullName>
    <label>Descripción Grupo Vendedor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>