force-app/main/default/objects/Factura__c/fields/IMP_FechaFactura__c.field-meta.xml
<CustomField>
    <fullName>IMP_FechaFactura__c</fullName>
    <description>Fecha de creación del registro de la factura SAP.</description>
    <label>Fecha de factura</label>
    <type>Date</type>
</CustomField>