force-app/main/default/objects/Factura__c/fields/IMP_GrupoVendedor__c.field-meta.xml
<CustomField>
    <fullName>IMP_GrupoVendedor__c</fullName>
    <description>El grupo de vendedores es también grupo de comerciales responsables de la gestión de ventas para determinados productos o prestaciones de servicios.</description>
    <label>Grupo vendedor</label>
    <length>10</length>
    <type>Text</type>
</CustomField>