force-app/main/default/objects/Factura__c/fields/IMP_LlaveExclusiva__c.field-meta.xml
<CustomField>
    <fullName>IMP_LlaveExclusiva__c</fullName>
    <description>Campo usado para realizar modificaciones desde un servicio externo</description>
    <externalId>true</externalId>
    <label>Llave Exclusiva</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>