force-app/main/default/objects/Factura__c/fields/IMP_MontoFactura__c.field-meta.xml
<CustomField>
    <fullName>IMP_MontoFactura__c</fullName>
    <label>Monto de la factura</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>