force-app/main/default/objects/Factura__c/fields/IMP_NombreCliente__c.field-meta.xml
<CustomField>
    <fullName>IMP_NombreCliente__c</fullName>
    <label>Nombre del cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>