force-app/main/default/objects/Factura__c/fields/IMP_NumeroCliente__c.field-meta.xml
<CustomField>
    <fullName>IMP_NumeroCliente__c</fullName>
    <label>Número de cliente</label>
    <length>20</length>
    <type>Text</type>
</CustomField>