force-app/main/default/objects/Factura__c/fields/IMP_Pedido__c.field-meta.xml
<CustomField>
    <fullName>IMP_Pedido__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pedido</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Facturas</relationshipLabel>
    <relationshipName>Facturas</relationshipName>
    <type>Lookup</type>
</CustomField>