force-app/main/default/objects/Factura__c/fields/IMP_Usuario__c.field-meta.xml
<CustomField>
    <fullName>IMP_Usuario__c</fullName>
    <label>Usuario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>