force-app/main/default/objects/Factura__c/fields/IMP_Vendedor__c.field-meta.xml
<CustomField>
    <fullName>IMP_Vendedor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Asocia una factura a un vendedor</description>
    <label>Vendedor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Facturas</relationshipName>
    <type>Lookup</type>
</CustomField>