force-app/main/default/objects/Factura__c/fields/Monto_Factura__c.field-meta.xml
<CustomField>
    <fullName>Monto_Factura__c</fullName>
    <formula>IF(  OR(IMP_ClaseFactura__c  = &quot;S1&quot;,IMP_ClaseFactura__c  = &quot;S3&quot;,IMP_ClaseFactura__c  = &quot;G2&quot;,IMP_ClaseFactura__c  = &quot;YBRE&quot;), IMP_MontoFactura__c  * -1, IMP_MontoFactura__c  * 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monto Factura</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>