force-app/main/default/objects/Factura__c/validationRules/IMP_EvitarCambioNumeroFactura.validationRule-meta.xml
<ValidationRule>
    <fullName>IMP_EvitarCambioNumeroFactura</fullName>
    <active>true</active>
    <description>El campo Número de Factura debe ser solo lectura y debe modificarse.</description>
    <errorConditionFormula>AND( $Profile.Name &lt;&gt; &apos;Integraciones&apos;,
ISCHANGED( Name )
)</errorConditionFormula>
    <errorMessage>No es posible modificar el número de factura.</errorMessage>
</ValidationRule>