force-app/main/default/objects/Factura__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IMP_ClaseFactura__c</columns>
    <columns>IMP_FechaFactura__c</columns>
    <columns>IMP_MontoFactura__c</columns>
    <columns>IMP_Vendedor__c</columns>
    <columns>IMP_CanalVentas__c</columns>
    <columns>IMP_NumeroCliente__c</columns>
    <columns>IMP_NombreCliente__c</columns>
    <columns>IMP_GrupoVendedor__c</columns>
    <columns>IMP_CondicionesPago__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>