force-app/main/default/objects/Factura__c/listViews/IMP_MisFacturas.listView-meta.xml
<ListView>
    <fullName>IMP_MisFacturas</fullName>
    <columns>NAME</columns>
    <columns>IMP_CanalVentas__c</columns>
    <columns>IMP_ClaseFactura__c</columns>
    <columns>IMP_NombreCliente__c</columns>
    <columns>Monto_Factura__c</columns>
    <filterScope>Mine</filterScope>
    <label>Mis Facturas</label>
</ListView>